// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableTableWithAdded should render 1`] = `
<div>
  <div
    class="toolbar-root"
  >
    <nav
      class="navbar navbar-root management-bar management-bar-light navbar-expand"
    >
      <div
        class="container-fluid"
      >
        <ul
          class="nav-root front-nav navbar-nav"
          role="tablist"
        >
          <li
            class="nav-item"
            role="presentation"
          >
            <a
              class="btn-root nav-link nav-link-monospaced btn btn-outline-borderless btn-outline-unstyled"
              href="/?field=name&page=1&sortOrder=DESC"
            >
              <svg
                class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                role="presentation"
              >
                <use
                  href="#order_arrow_ascending"
                />
              </svg>
            </a>
          </li>
        </ul>
        <div
          class="navbar-form navbar-form-autofit"
        >
          <div
            class="input-group search"
          >
            <div
              class="input-group-item"
            >
              <input
                class="input-root form-control input-group-inset input-group-inset-after"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  aria-label="Search"
                  class="button-root btn btn-unstyled"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search icon-root"
                    role="presentation"
                  >
                    <use
                      href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    class="searchable-table-with-staged-root d-flex flex-column flex-grow-1"
  >
    <div
      class="table-responsive table-root flex-grow-1"
    >
      <table
        class="table table-autofit table-hover table-heading-nowrap table-nowrap"
      >
        <thead>
          <tr>
            <th
              class="table-head-title table-cell-expand"
            >
              <a
                class="button-root inline-item text-truncate-inline btn btn-unstyled"
                href="/?field=name&page=1&sortOrder=DESC"
              >
                <span
                  class="text-truncate"
                >
                  Name
                </span>
                <span
                  class="inline-item inline-item-after"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-order-arrow-up icon-root"
                    role="presentation"
                  >
                    <use
                      href="#order-arrow-up"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th
              class="table-head-title"
            >
              <a
                class="button-root inline-item text-truncate-inline btn btn-unstyled"
                href="/?field=properties.email&page=1&sortOrder=ASC"
              >
                <span
                  class="text-truncate"
                >
                  Email
                </span>
              </a>
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`SearchableTableWithAdded should show the staged table if showStaged is true 1`] = `
<div>
  <div
    class="toolbar-root"
  >
    <nav
      class="navbar navbar-root management-bar management-bar-light navbar-expand"
    >
      <div
        class="container-fluid"
      >
        <ul
          class="nav-root front-nav navbar-nav"
          role="tablist"
        >
          <li
            class="nav-item"
            role="presentation"
          >
            <a
              class="btn-root nav-link nav-link-monospaced btn btn-outline-borderless btn-outline-unstyled"
              href="/?field=name&page=1&sortOrder=DESC"
            >
              <svg
                class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                role="presentation"
              >
                <use
                  href="#order_arrow_ascending"
                />
              </svg>
            </a>
          </li>
        </ul>
        <div
          class="navbar-form navbar-form-autofit"
        >
          <div
            class="input-group search"
          >
            <div
              class="input-group-item"
            >
              <input
                class="input-root form-control input-group-inset input-group-inset-after"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  aria-label="Search"
                  class="button-root btn btn-unstyled"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search icon-root"
                    role="presentation"
                  >
                    <use
                      href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    class="searchable-table-with-staged-root d-flex flex-column flex-grow-1"
  >
    <nav
      class="subnav-tbar subnav-tbar-root tbar"
    >
      <div
        class="container-fluid"
      >
        <div
          class="tbar-nav"
        >
          <div
            class="tbar-item"
          >
            <div
              class="tbar-section text-truncate"
            >
              <span>
                Showing only added Items.
              </span>
            </div>
          </div>
          <div
            class="tbar-item tbar-item-expand"
          >
            <div
              class="tbar-section text-truncate"
            >
              <button
                class="button-root btn-link btn btn-outline-borderless btn-outline-unstyled"
                type="button"
              >
                View Current Members
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="table-responsive table-root flex-grow-1"
    >
      <table
        class="table table-autofit table-hover table-heading-nowrap table-nowrap"
      >
        <thead>
          <tr>
            <th
              class="table-head-title table-cell-expand"
            >
              <a
                class="button-root inline-item text-truncate-inline btn btn-unstyled"
                href="/?field=name&page=1&sortOrder=DESC"
              >
                <span
                  class="text-truncate"
                >
                  Name
                </span>
                <span
                  class="inline-item inline-item-after"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-order-arrow-up icon-root"
                    role="presentation"
                  >
                    <use
                      href="#order-arrow-up"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th
              class="table-head-title"
            >
              <a
                class="button-root inline-item text-truncate-inline btn btn-unstyled"
                href="/?field=properties.email&page=1&sortOrder=ASC"
              >
                <span
                  class="text-truncate"
                >
                  Email
                </span>
              </a>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="table-cell-expand"
            >
              <div
                class="h4 table-title text-truncate"
              >
                Foo Bar
              </div>
            </td>
            <td>
              email0@liferay.com
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="table-cell-expand"
            >
              <div
                class="h4 table-title text-truncate"
              >
                Foo Bar
              </div>
            </td>
            <td>
              email1@liferay.com
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="table-cell-expand"
            >
              <div
                class="h4 table-title text-truncate"
              >
                Foo Bar
              </div>
            </td>
            <td>
              email2@liferay.com
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="table-cell-expand"
            >
              <div
                class="h4 table-title text-truncate"
              >
                Foo Bar
              </div>
            </td>
            <td>
              email3@liferay.com
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="table-cell-expand"
            >
              <div
                class="h4 table-title text-truncate"
              >
                Foo Bar
              </div>
            </td>
            <td>
              email4@liferay.com
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <nav
    class="navbar navbar-root pagination-bar-root"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown dropdown-root pagination-items-per-page"
      >
        <button
          aria-controls="clay-dropdown-menu-1"
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle button-root btn btn-sm btn-secondary"
          type="button"
        >
          20 Items
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom ml-2"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
      </div>
      <div
        class="pagination-results"
      >
        Showing 1 to 5 of 5 entries.
      </div>
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <button
            class="button-root btn btn-unstyled page-link btn btn-primary"
            disabled=""
            href=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-left-small"
              />
            </svg>
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            class="button-root btn btn-unstyled page-link btn btn-primary"
            href=""
            type="button"
          >
            1
          </button>
        </li>
        <li
          class="page-item disabled"
        >
          <button
            class="button-root btn btn-unstyled page-link btn btn-primary"
            disabled=""
            href=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-right-small"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
